new_tests/semantics/type/bad/000_LOCAL_1.cm
/*
    Type Error 400
    Local variable 'a' was declared with type Int, but 'a' was initialized to a value of type Real.

    Suggestion: A variable declared with type Int must be initialized to a value of type Int.
*/

def local a:Int = 3.14 
